Trying to fix scrollbar on windows

--- a/front/src/app/routes/activities/popin-edit-activities/popin-edit-activities.component.scss
+++ b/front/src/app/routes/activities/popin-edit-activities/popin-edit-activities.component.scss
@@ -214,10 +214,6 @@
   height: 56px;
   width: 100%;
 
-  &.is-windows {
-    padding-right: 15px;
-  }
-
   .contentieux-item-label {
     padding: 16px;
     flex: 1;
